Implementazione funzionalià sulla modalità CLI, implementazione gestione del carrello, miglioramenti e ottimizzazioni.